<resources>
    <string name="BASE_URL">https://one.ofo.com</string>
    <string name="BASE_URL_WEB">https://onecommon.ofo.com</string>
    <string name="Quit">Quit</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_call_us">Call us (24/7 service)</string>
    <string name="about_contact_us">Contact us</string>
    <string name="about_current_version">Current version</string>
    <string name="about_ofo">About ofo</string>
    <string name="about_ofo_intro">ofo is a global bike sharing platform and we want to make getting around your city more convenient, affordable and environmentally friendly. Drive less, ride more!</string>
    <string name="about_ofo_title">About ofo</string>
    <string name="about_ofo_url">/helloworld/about/index.html</string>
    <string name="about_rights_text">2018 ofo all rights reserved</string>
    <string name="about_you">About You</string>
    <string name="accept">accept</string>
    <string name="accept_extra_fee">I accept the extra fee</string>
    <string name="access_denied">Access Denied</string>
    <string name="add">Add</string>
    <string name="add_and_pay">Add and Pay</string>
    <string name="add_card">Add Card</string>
    <string name="add_credit_card_prepay">Reminder: Prepay card is not applicable for FREE WEEK auto-new. Credit or Debit card is welcome!</string>
    <string name="add_credit_or_debit_card">Add Credit or Debit Card</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="add_promo_code">Add Promo Code</string>
    <string name="amex_account">American Express Card (%1$s)</string>
    <string name="api_error_io_error">Sorry, we cannot process your request right now. Please try again later.</string>
    <string name="api_error_net_timeout">Network error. Please check your network and try again.</string>
    <string name="api_error_not_logged_in">Please log in.</string>
    <string name="app_name">ofo</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="authorization">Authorization</string>
    <string name="auto_pay_failed">Automatic payment failed, please change the payment method or bind new bank card.</string>
    <string name="auto_recharge_dialog_msg">Your balance will be automatically recharged %1$s when it reaches %2$s.</string>
    <string name="auto_recharge_dialog_title">Do you want to turn on auto-recharge?</string>
    <string name="auto_recharge_tips">With Auto-Recharge, your balance will be automatically recharged when it reaches %1$s. You can turn off Auto-Reload anytime.</string>
    <string name="auto_recharge_title">Auto-Recharge</string>
    <string name="automatically_renew_failed">"Automatically 
renew failed"</string>
    <string name="available">Available</string>
    <string name="away">away</string>
    <string name="back">Back</string>
    <string name="back_to_homepage">Back to homepage</string>
    <string name="back_to_ride">back to ride</string>
    <string name="balance">Balance(%1$s)</string>
    <string name="balance_account">Balance</string>
    <string name="banner_ride_range">Ride Range<Data> &lt;font color=#3974ff>%1$s&lt;/font></Data></string>
    <string name="banner_unlock_price"><Data>&lt;font color=#3974ff>%1$s&lt;/font></Data> unlock +</string>
    <string name="battery">battery</string>
    <string name="bike_actived">Your ofo pass is actived</string>
    <string name="bike_no">Bike #</string>
    <string name="bike_no_code">Bike No.%1$s</string>
    <string name="bike_number">Bike Number</string>
    <string name="bike_parking_area">Bike parking area</string>
    <string name="bike_pass_frozen_dialog_content">Please pay the deposit instantly to resume service.</string>
    <string name="bike_pass_frozen_title">ofo pass is frozen as your deposit was refunded.</string>
    <string name="bike_pass_not_open">There is no ofo pass open in this city.</string>
    <string name="bike_pass_remaining">Your ofo pass has %1$s remaining days now!</string>
    <string name="bind_card_apply">T&amp;Cs apply</string>
    <string name="bind_card_content">Add a credit or debit card to enjoy more rides!</string>
    <string name="bind_card_prompt">Before you can start riding, please add a payment method (credit/debit card) to your account.</string>
    <string name="bind_card_tip">To redeem your ofo Pass, please add a valid credit or debit card to your account.</string>
    <string name="bind_failed">Card upload error. Please check that the information you entered is correct!</string>
    <string name="birthday">Birthday</string>
    <string name="ble_open_notice">Please turn on Bluetooth to unlock ofo.</string>
    <string name="ble_unlock_fail_title">Oops</string>
    <string name="ble_unlock_get_pwd">Get code</string>
    <string name="ble_unlock_progress">%1$s%%</string>
    <string name="ble_unlock_prompt">Unlocking the bike...</string>
    <string name="blue_area_comment">blue area</string>
    <string name="blue_pay_account">BluePay account</string>
    <string name="bluetooth_failed">Bike cannot be unlocked via Bluetooth. Please unlock it with the code.</string>
    <string name="bonus">bonus</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="brake">Brake</string>
    <string name="calling_codes">Calling Codes</string>
    <string name="calorie">Calories(%1$s)</string>
    <string name="camera_access_denied">Please grant ofo access to your camera to unlock a bike. You can check if camera permissions are on by going to \"Settings -> Privacy -> Camera\"</string>
    <string name="camera_privacy_title">Allow ofo to access your camera</string>
    <string name="can_not_connect_device">"Can't connect Scooter,Get close to the scooter,please"</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_failed">Cancel failed</string>
    <string name="cancel_success">Successfully canceled</string>
    <string name="canceled_successfully">Canceled successfully</string>
    <string name="cannot_create_image_file">Image file cannot be created</string>
    <string name="carbon">Carbon(%1$s)</string>
    <string name="card_cid_des">A four-digit code on your credit card, you can find this on the front of your card.</string>
    <string name="card_cvc_des">A three-digit code on your credit card, you can find this on the back of your card.</string>
    <string name="card_exp">EXP. Date</string>
    <string name="card_exp_date_des">You should be able to find this date on the front of your card, under the card number.</string>
    <string name="card_exp_desc">The card expiration date is on the front of the card under the card number.</string>
    <string name="card_not_support">This card is not supported. Please contact our customer service if you need help.</string>
    <string name="card_number">Card Number</string>
    <string name="change_default_method">Confirm payment change?</string>
    <string name="change_default_payment_method">Are you sure you want to change your default payment method?</string>
    <string name="change_fail">Change Failed</string>
    <string name="choose_photo">Choose a photo</string>
    <string name="coupon_expire_time">This coupon can be used anytime before *</string>
    <string name="coupon_tip">You’ve just received a<Data>&lt;font color=#000000>&lt;B> * coupon&lt;/B>&lt;/font></Data> for your next trip!</string>
    <string name="coupon_uppercase">COUPON</string>
    <string name="cvv_cvc_cid">CVV/CVC/CID</string>
    <string name="deposit_ride_more">More rides with same money</string>
    <string name="deposit_title">"Transfer Deposit to Balance
Earn More Benefits"</string>
    <string name="deposit_to_balance">TRANSFER TO BALANCE</string>
    <string name="deposit_wait">NOT NOW</string>
    <string name="deposit_waive">Deposit waived as a loyal rider</string>
    <string name="email">Email</string>
    <string name="end_code_to_unlock">Enter code to unlock</string>
    <string name="end_the_trip">End the trip</string>
    <string name="enjoy_ofo">Enjoying ofo?</string>
    <string name="gender">Gender</string>
    <string name="go_gp">Go</string>
    <string name="gp_guide_content">How’s everything? Show your support by leaving us a positive review in the Google Play Store.</string>
    <string name="holder_name">Cardholder Name</string>
    <string name="how_to_end_trip">How to end trip</string>
    <string name="lock_accident">Locked the bike accidentally ></string>
    <string name="mm_yy">MM/YY</string>
    <string name="name">Name</string>
    <string name="need_help">Need help?</string>
    <string name="need_repair">Repair needed</string>
    <string name="ofo">ofo</string>
    <string name="ofo_has_no_camera_privilege">"ofo does not have permission to access your camera. 
Please grant ofo camera access in your system settings."</string>
    <string name="ok">OK</string>
    <string name="parking_spot_fee">Park in parking spot to avoid<Data> &lt;font color=#f12745>%1$s extra Regulatory Handling Fee&lt;/font></Data></string>
    <string name="pay_now">Pay Now</string>
    <string name="phone_number">Phone Number</string>
    <string name="protrait">Portrait</string>
    <string name="renew_bind_new_card">Add a New Card</string>
    <string name="renew_manually_bind_card_tip">To continue enjoy unlimited ofo rides, please add a new card.</string>
    <string name="renew_manually_renew_fail">Uh-oh it looks like your renewal payment failed. Your ofo Pass will expire within 3 days.</string>
    <string name="renew_manually_renew_your_pass">Renew your ofo Pass</string>
    <string name="setting">Setting</string>
    <string name="take_photo">Take a picture</string>
    <string name="terms_and_conditions">View Terms and Conditions</string>
    <string name="trip_completed">Trip Completed</string>
</resources>