<?xml version="1.0" encoding="utf-8"?>
<LinearLayout n1:orientation="vertical" n1:layout_width="fill_parent" n1:layout_height="wrap_content"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <so.ofo.abroad.widget.MediumBoldTextView n1:textSize="@dimen/font_21sp" n1:textColor="@color/color_202020" n1:id="@id/id_lta_fee_prompt_tv" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/parking_spot_fee" />
    <TextView n1:id="@id/id_lta_fee_lock_accident_tv" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginTop="@dimen/spacing_l" n1:text="@string/lock_accident" n1:drawableLeft="@mipmap/lock" n1:drawablePadding="@dimen/spacing_6dp" n1:drawableStart="@mipmap/lock" />
    <so.ofo.abroad.widget.MediumBoldTextView n1:textSize="@dimen/font_17sp" n1:textColor="@color/color_202020" n1:gravity="center" n1:id="@id/id_lta_back_ride_tv" n1:background="@drawable/shape_rect_solid_ffe300_r12" n1:paddingTop="@dimen/spacing_17dp" n1:paddingBottom="@dimen/spacing_17dp" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginTop="@dimen/spacing_30" n1:text="@string/back_to_ride" n2:textAllCaps="true" xmlns:n2="http://schemas.android.com/apk/res-auto" />
    <so.ofo.abroad.widget.MediumBoldTextView n1:textSize="@dimen/font_17sp" n1:textColor="@color/color_202020" n1:gravity="center" n1:id="@id/id_lta_accept_fee_tv" n1:background="@drawable/shape_rect_solid_ffffff_stroke_d2d2d2_r12" n1:paddingTop="@dimen/spacing_17dp" n1:paddingBottom="@dimen/spacing_17dp" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginTop="@dimen/spacing_18dp" n1:text="@string/end_the_trip" n3:textAllCaps="true" xmlns:n3="http://schemas.android.com/apk/res-auto" />
    <TextView n1:textSize="@dimen/font_11sp" n1:textColor="@color/color_99202020" n1:layout_gravity="center_horizontal" n1:id="@id/mail_tv" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginTop="@dimen/spacing_x" />
</LinearLayout>